# trumpet-cloud-be

./: .editorconfig  .env.example  .env.example.arm  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  app_layer_entrypoint.py  config.json  docker-compose.prod.yml  docker-compose.yml  docker-compose.yml.arm  entrypoint.sh  generate_tables.py  lib_application_layer.py  library_layer.py  logic_loader.py  main.py  openapi.json  pyproject.toml  seed-initial-data.py  temp_config.json  watch.py
adapters/auth_adapters/: auth_handler.py  auth_handler_factory.py  jwt_adapter.py  jwt_auth_adapter.py  token_handler_factory.py
adapters/email_service_adapters/: azure_email_service_adapters.py  email_service_handler_factory.py  smtp_email_service_adapters.py
adapters/entity_adapters/: entity_validation.py
adapters/entity_generation/: entity_adapter.py
adapters/fga_authorization_adapters/: __init__.py  openfga_authorization_adapter.py  openfga_authorization_model.json
adapters/lib_archi/: controller.py
adapters/lib_archi_adoption/: inmemory_repository.py
adapters/lib_archirs/: fastapi_controller.py  inmemory_repository.py  non_resource_app_service_adapter.py  non_resource_controller_adapter.py  orm_repository.py
adapters/lib_repo_discovery/: repo_direct_invoker_adapter.py  repo_discovery_getter_adapter.py  repo_discovery_setter_adapter.py
adapters/middlewares/: allowed_host_middleware.py  auth_middleware.py  authorization_middleware.py  cors.py  pagination_middleware.py  rate_limit_middleware.py  response_middleware.py  validation_middleware.py
adapters/password_adapters/: bcrypt_adapters.py
adapters/response_adapters/: __init__.py  response_handler.py
adapters/utils/: utils.py
adapters/wrap_orm_adapters/: orm_adapter.py
adapters/wrap_restify/: websocket_pool_adapter.py
application_layer/abstractions/: app_repo_discovery_setter_interface.py  auth_interface.py  controller_interface.py  entity_interface.py  fga_authorizer_interface.py  non_resource_app_service_interface.py  non_resource_controller_interface.py  orm_interface.py  password_manager_interface.py  response_interface.py
application_layer/entities/: __init__.py  dataset.py  file.py  notification.py  organization.py  organization_study_agreement.py  organization_user.py  organizations.py  product.py  role.py  study.py  study_agreement.py  study_agreement_dataset.py  study_agreement_query.py  study_agreement_result.py  study_user.py  user.py  user_role.py
domain_layer/: ExceptJohn.domain_object.py  auth_manager.py  authorization_manager.py  logic_loader.py  password_manager.py  repo_discovery_manager.py  response_formatter.py  users_domain_service.py  websocket_pool_manager.py
domain_layer/abstractions/: app_repo_discovery_getter_interface.py  app_repo_invoker_interface.py  email_sending_interface.py  password_manager_interface.py  request_interface.py  response_formatter_interface.py  websocket_pool_interface.py  websocket_wrapper_interface.py
domain_layer/dependency/: email_service_manager.py
domain_layer/utils/: get_role.py  (+9 more)
domain_services/: Users.domain_service.py
email_service/: azure_email_service.py  email_service.py  smtp_email_service.py
lib_archi/: base_application_service.py  base_controller.py  base_entity.py  base_repository.py  non_resource_app_service.py  non_resource_controller.py  repository_gateway_service.py
lib_repo_discovery/: repo_discovery.py
logic_injector/: base_logic_injector.py
migrations/: README  env.py
tests/: disposable_email_blocklist.conf  email_content.html
wrap_orm/: README.md
(+150 files in other folders)
