[tool.poetry]
name = "Dev Framework Playground"
version = "0.1.0"
description = ""
authors = ["Nurujjaman Nur <nur@technovativesolutions.co.uk>"]
readme = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
wrap-validate = {git = "https://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@github.com/tvsltd/wrap_validate.git", rev = "develop"}
gunicorn = "^23.0.0"
wrap-restify = {git = "https://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@github.com/tvsltd/wrap_restify.git", rev = "feat/implement-request-object"}
wrap-orm = {git = "https://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@github.com/tvsltd/wrap_orm.git", rev = "feature/crud-implementation"}
stringcase = "^1.2.0"
pymysql = "^1.1.1"
psycopg2-binary = "^2.9.10"
requests = "^2.32.3"
openfga-sdk = "^0.9.1"
wrap-auth = {git = "https://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@github.com/tvsltd/wrap-auth.git", rev="develop"}
pandas = "^2.2.3"
bcrypt = "^4.3.0"
anyio = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
